working mongodb integration